--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
         }
 
         function updateCooldown(game) {
-            cooldowns[game] = Date.now() + 0 * 60 * 60 * 1000; // 6 hours in milliseconds
-            localStorage.setItem('cooldowns', JSON.stringify(cooldowns));
+            cooldowns[game] = Date.now() + 1 * 60 * 1000; // 1 minute in milliseconds  localStorage.setItem('cooldowns', JSON.stringify(cooldowns));
             updateButtonStates();
         }
 
@@ -132,9 +131,9 @@
                 if (cooldown > now) {
                     button.disabled = true;
                     const timeLeft = Math.ceil((cooldown - now) / 1000);
-                    const hours = Math.floor(timeLeft / 3600);
-                    const minutes = Math.floor((timeLeft % 3600) / 60);
-                    button.innerHTML = `${button.innerHTML.split('<br>')[0]}<br>(${hours}h ${minutes}m)`;
+const minutes = Math.floor(timeLeft / 60);
+const seconds = timeLeft % 60;
+button.innerHTML = `${button.innerHTML.split('<br>')[0]}<br>(${minutes}m ${seconds}s)`;
                 } else {
                     button.disabled = false;
                     button.innerHTML = button.innerHTML.split('<br>')[0];
@@ -168,7 +167,6 @@
         });
 
         loadCooldowns();
-        setInterval(updateButtonStates, 60000); // Update button states every minute
-    </script>
+        setInterval(updateButtonStates, 1000); // Update button states every second  </script>
 </body>
                     </html>
