--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         function startCosmicBlast() {
             gameArea.innerHTML = '<div id="score" class="absolute top-2 left-2 text-xl font-bold">Score: 0</div>';
             let score = 0;
+            let isGameOver = false;
             const scoreElement = document.getElementById('score');
 
             const ship = createSVGElement('spaceship');
@@ -134,6 +135,8 @@
             }
 
             function updateGame() {
+                if (isGameOver) return;
+
                 const objects = gameArea.querySelectorAll('.asteroid, .gem');
                 objects.forEach(object => {
                     moveObject(object);
@@ -167,6 +170,7 @@
             });
 
             function endGame() {
+                isGameOver = true;
                 clearInterval(gameInterval);
                 alert(`Game Over! You scored ${score} points and earned ${gems} Galactic Gems!`);
                 gameArea.innerHTML = '';
@@ -185,6 +189,7 @@
             gameArea.innerHTML = `
                 <div class="flex flex-col items-center justify-center h-full">
                     <div id="spinner" class="w-64 h-64 border-8 border-indigo-600 rounded-full relative mb-4">
+                
                         ${prizes.map((prize, index) => `
                             <div class="absolute w-full h-full" style="transform:  rotate(${index * (360 / prizes.length)}deg)">
                                 <div class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-indigo-500 text-white px-2 py-1 rounded">
@@ -226,108 +231,141 @@
 
         function startSwipeCosmic() {
             gameArea.innerHTML = `
-                <div class="flex flex-col items-center justify-center h-full">
-                    <div id="swipe-area" class="w-64 h-32 bg-slate-600 rounded-lg flex items-center justify-center cursor-pointer relative overflow-hidden">
-                        <div id="swipe-object" class="w-16 h-16 bg-indigo-500 rounded-full absolute left-0"></div>
-                    </div>
-                    <p id="swipe-timer" class="mt-4 text-2xl font-bold">60</p>
-                    <p class="mt-2">Swipe to earn CosmicCoins!</p>
-                </div>
+                <canvas id="game-canvas" width="300" height="400" class="border border-indigo-600"></canvas>
+                <p id="swipe-timer" class="mt-4 text-2xl font-bold">60</p>
+                <p id="swipe-score" class="mt-2 text-xl">Score: 0</p>
             `;
 
-            const swipeArea = document.getElementById('swipe-area');
-            const swipeObject = document.getElementById('swipe-object');
+            const canvas = document.getElementById('game-canvas');
+            const ctx = canvas.getContext('2d');
             const swipeTimer = document.getElementById('swipe-timer');
-            let startX, isDragging = false;
+            const swipeScore = document.getElementById('swipe-score');
+
+            let coins = [];
+            let score = 0;
             let timeLeft = 60;
-            let swipeCount = 0;
 
-            swipeArea.addEventListener('mousedown', (e) => {
-                isDragging = true;
-                startX = e.clientX - swipeObject.offsetLeft;
-            });
-
-            swipeArea.addEventListener('mousemove', (e) => {
-                if (!isDragging) return;
-                e.preventDefault();
-                let x = e.clientX - swipeArea.offsetLeft - startX;
-                x = Math.max(0, Math.min(x, swipeArea.clientWidth - swipeObject.clientWidth));
-                swipeObject.style.left = `${x}px`;
-
-                if (x === swipeArea.clientWidth - swipeObject.clientWidth) {
-                    swipeCount++;
-                    coins += 1;
-                    updateResources();
-                    swipeObject.style.left = '0px';
+            class Coin {
+                constructor(x, y, value, velocity) {
+                    this.x = x;
+                    this.y = y;
+                    this.value = value;
+                    this.velocity = velocity;
                 }
-            });
+            }
 
-            swipeArea.addEventListener('mouseup', () => {
-                isDragging = false;
-            });
+            function generateCoin() {
+                const x = canvas.width;
+                const y = Math.random() * (canvas.height - 20);
+                const value = Math.floor(Math.random() * 10) + 1;
+                const velocity = Math.random() * 2 + 1;
+                coins.push(new Coin(x, y, value, velocity));
+            }
 
-            swipeArea.addEventListener('mouseleave', () => {
-                isDragging = false;
-            });
+            function updateGame() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-            const timer = setInterval(() => {
+                coins = coins.filter(coin => {
+                    coin.x -= coin.velocity;
+                    ctx.fillStyle = 'gold';
+                    ctx.beginPath();
+                    ctx.arc(coin.x, coin.y, 10, 0, Math.PI * 2);
+                    ctx.fill();
+                    ctx.fillStyle = 'black';
+                    ctx.font = '10px Arial';
+                    ctx.textAlign = 'center';
+                    ctx.fillText(coin.value, coin.x, coin.y + 3);
+
+                    return coin.x > -20;
+                });
+
+                if (Math.random() < 0.05) {
+                    generateCoin();
+                }
+
+                swipeScore.textContent = `Score: ${score}`;
+            }
+
+            function handleSwipe(e) {
+                const rect = canvas.getBoundingClientRect();
+                const x = e.clientX - rect.left;
+                const y = e.clientY - rect.top;
+
+                coins = coins.filter(coin => {
+                    if (Math.abs(coin.x - x) < 20 && Math.abs(coin.y - y) < 20) {
+                        score += coin.value;
+                        return false;
+                    }
+                    return true;
+                });
+            }
+
+            canvas.addEventListener('click', handleSwipe);
+
+            const gameLoop = setInterval(() => {
+                updateGame();
                 timeLeft--;
                 swipeTimer.textContent = timeLeft;
-                if (timeLeft === 0) {
-                    clearInterval(timer);
-                    alert(`Time's up! You swiped ${swipeCount} times and earned ${swipeCount} CosmicCoins!`);
+
+                if (timeLeft <= 0) {
+                    clearInterval(gameLoop);
+                    alert(`Time's up! You scored ${score} points!`);
+                    coins += score;
+                    updateResources();
                     gameArea.innerHTML = '';
                 }
-            }, 1000);
+            }, 1000 / 60);
         }
 
         function startHoldCosmic() {
             gameArea.innerHTML = `
                 <div class="flex flex-col items-center justify-center h-full">
-                    <div id="hold-button" class="w-32 h-32 bg-indigo-600 rounded-full flex items-center justify-center cursor-pointer select-none">
-                        <span class="text-2xl font-bold">HOLD</span>
-                    </div>
+                    <button id="hold-button" class="w-32 h-32 bg-indigo-600 rounded-full flex items-center justify-center cursor-pointer select-none text-2xl font-bold">HOLD</button>
                     <p id="hold-earnings" class="mt-4 text-2xl font-bold">Earnings: 0 CosmicCoins</p>
-                    <button id="end-game" class="mt-4 bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">End Game</button>
+                    <p id="hold-timer" class="mt-2 text-xl">Time: 0s</p>
                 </div>
             `;
 
             const holdButton = document.getElementById('hold-button');
             const holdEarnings = document.getElementById('hold-earnings');
-            const endGameButton = document.getElementById('end-game');
+            const holdTimer = document.getElementById('hold-timer');
             let isHolding = false;
             let earnings = 0;
-            let gameLoop;
+            let holdTime = 0;
+            let holdInterval;
+
+            function updateHoldGame() {
+                if (isHolding) {
+                    holdTime++;
+                    earnings = Math.floor(holdTime / 5);  // Earn 1 coin every 5 seconds
+                    holdEarnings.textContent = `Earnings: ${earnings} CosmicCoins`;
+                    holdTimer.textContent = `Time: ${holdTime}s`;
+                }
+            }
 
             holdButton.addEventListener('mousedown', () => {
                 isHolding = true;
                 holdButton.classList.add('bg-indigo-700');
+                holdInterval = setInterval(updateHoldGame, 1000);
             });
 
-            holdButton.addEventListener('mouseup', () => {
-                isHolding = false;
-                holdButton.classList.remove('bg-indigo-700');
-            });
+            holdButton.addEventListener('mouseup', endHold);
+            holdButton.addEventListener('mouseleave', endHold);
 
-            holdButton.addEventListener('mouseleave', () => {
-                isHolding = false;
-                holdButton.classList.remove('bg-indigo-700');
-            });
-
-            gameLoop = setInterval(() => {
+            function endHold() {
                 if (isHolding) {
-                    earnings++;
-                    coins++;
+                    isHolding = false;
+                    holdButton.classList.remove('bg-indigo-700');
+                    clearInterval(holdInterval);
+                    coins += earnings;
                     updateResources();
-                    holdEarnings.textContent = `Earnings: ${earnings} CosmicCoins`;
+                    alert(`You held for ${holdTime} seconds and earned ${earnings} CosmicCoins!`);
+                    holdTime = 0;
+                    earnings = 0;
+                    holdEarnings.textContent = `Earnings: 0 CosmicCoins`;
+                    holdTimer.textContent = `Time: 0s`;
                 }
-            }, 1000);
-
-            endGameButton.addEventListener('click', () => {
-                clearInterval(gameLoop);
-                alert(`Game ended! You earned ${earnings} CosmicCoins!`);
-                gameArea.innerHTML = '';
-            });
+            }
         }
 
         gameButtons.forEach(button => {
@@ -344,4 +382,4 @@
         });
     </script>
 </body>
-                    </html>
+</html>
