--- a/index.html
+++ b/index.html
@@ -48,7 +48,27 @@
             </button>
             
         </div>
+<!-- Live Music Player -->
+<div class="text-center bg-slate-700 rounded-lg p-4">
+    <h2 class="text-2xl font-bold mb-4">Live Music Player</h2>
+    
+    <!-- Audio player -->
+    <audio id="music-player" autoplay>
+        <source src="http://listen.181fm.com/181-beat_128k.mp3?noPreRoll=true" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <!-- Mute and Unmute buttons -->
+    <div class="mt-4 flex justify-center gap-4">
+        <button id="mute-btn" class="game-btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-105">
+            <i class="fas fa-volume-mute mr-2"></i>Mute 🔇
+        </button>
+        <button id="unmute-btn" class="game-btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-105 hidden">
+            <i class="fas fa-volume-up mr-2"></i>Unmute 🔊
+        </button>
+    </div>
 </div>
+
         <div id="game-area" class="bg-slate-700 rounded-lg p-4 h-96 relative overflow-hidden">
             <!-- Game elements will be added here dynamically -->
         </div>
