--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         }
     </style>
 </head>
+
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ES3NKKYCS7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ES3NKKYCS7');
+  </script>
+    
 <body class="bg-slate-900 text-white min-h-screen flex flex-col items-center justify-center cosmic-bg">
     <div id="game-container" class="w-full max-w-3xl p-6 bg-slate-800 bg-opacity-90 rounded-xl shadow-2xl">
         <!-- Header -->
