--- a/index.html
+++ b/index.html
@@ -78,44 +78,8 @@
 
     gtag('config', 'G-ES3NKKYCS7');
   </script>
-    <style>
-    .tooltip {
-        visibility: hidden;
-        position: absolute;
-        z-index: 1;
-        bottom: 125%;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: rgba(0, 0, 0, 0.8);
-        color: #fff;
-        text-align: center;
-        padding: 5px 10px;
-        border-radius: 6px;
-        font-size: 14px;
-        white-space: nowrap;
-    }
-    .tooltip::after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: rgba(0, 0, 0, 0.8) transparent transparent transparent;
-    }
-    .game-btn:hover .tooltip {
-        visibility: visible;
-    }
-	    @keyframes fall {
-    0% { transform: translateY(-100%); }
-    100% { transform: translateY(100vh); }
-}
-.falling-object {
-    position: absolute;
-    animation: fall linear;
-}
-</style>
+    
+
 	
 <body class="bg-slate-900 text-white min-h-screen flex flex-col items-center justify-center cosmic-bg">
     <div id="game-container" class="w-full max-w-4xl p-6 bg-slate-800 bg-opacity-90 rounded-xl shadow-2xl">
@@ -145,7 +109,7 @@
                 <span class="tooltip">Spin the wheel for cosmic prizes!</span>
             </button>
             <button class="game-btn bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 text-white font-bold py-4 px-6 rounded-lg transition duration-300 ease-in-out transform hover:scale-105 shadow-lg relative" data-game="cosmic-catcher">
-    <i class="fas fa-star mr-2"></i>Cosmic Catcher
+    <i class="fas fa-star mr-2"></i> Coming soon 
     <span class="tooltip">Catch gems, avoid bombs, and freeze time!</span>
 </button>
             <button class="game-btn bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 text-white font-bold py-4 px-6 rounded-lg transition duration-300 ease-in-out transform hover:scale-105 shadow-lg relative" data-game="hold-cosmic">
@@ -396,116 +360,7 @@
             });
         }
 
-        const gameArea = document.getElementById('game-area');
-const scoreElement = document.getElementById('score');
-const timerElement = document.getElementById('timer');
-const freezeTimerElement = document.getElementById('freeze-timer');
-const startButton = document.getElementById('start-button');
-
-let score = 0;
-let gameTime = 60;
-let freezeTime = 0;
-let gameInterval;
-let freezeInterval;
-let isGameRunning = false;
-
-const objectTypes = {
-    gem: { svg: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-green-400"><path fill-rule="evenodd" d="M12 1.5a.75.75 0 01.75.75V4.5a.75.75 0 01-1.5 0V2.25A.75.75 0 0112 1.5zM5.636 4.136a.75.75 0 011.06 0l1.592 1.591a.75.75 0 01-1.061 1.06l-1.591-1.59a.75.75 0 010-1.061zm12.728 0a.75.75 0 010 1.06l-1.591 1.592a.75.75 0 01-1.06-1.061l1.59-1.591a.75.75 0 011.061 0zm-6.816 4.496a.75.75 0 01.82.311l5.228 7.917a.75.75 0 01-.777 1.148l-2.097-.43 1.045 3.9a.75.75 0 01-1.45.388l-1.044-3.899-1.601 1.42a.75.75 0 01-1.247-.606l.569-9.47a.75.75 0 01.554-.68zM3 10.5a.75.75 0 01.75-.75H6a.75.75 0 010 1.5H3.75A.75.75 0 013 10.5zm14.25 0a.75.75 0 01.75-.75h2.25a.75.75 0 010 1.5H18a.75.75 0 01-.75-.75zm-8.962 3.712a.75.75 0 010 1.061l-1.591 1.591a.75.75 0 11-1.061-1.06l1.591-1.592a.75.75 0 011.06 0z" clip-rule="evenodd" /></svg>', points: 10 },
-    bomb: { svg: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-red-500"><path fill-rule="evenodd" d="M10.5 3.798v5.02a3 3 0 01-.879 2.121l-2.377 2.377a9.845 9.845 0 015.091 1.013 8.315 8.315 0 005.713.636l.285-.071-3.954-3.955a3 3 0 01-.879-2.121v-5.02a23.614 23.614 0 00-3 0zm4.5.138a.75.75 0 00.093-1.495A24.837 24.837 0 0012 2.25a25.048 25.048 0 00-3.093.191A.75.75 0 009 3.936v4.882a1.5 1.5 0 01-.44 1.06l-6.293 6.294c-1.62 1.621-.903 4.475 1.471 4.88 2.686.46 5.447.698 8.262.698 2.816 0 5.576-.239 8.262-.697 2.373-.406 3.092-3.26 1.47-4.881L15.44 9.879A1.5 1.5 0 0115 8.818V3.936z" clip-rule="evenodd" /></svg>', points: -20 },
-    freeze: { svg: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-blue-400"><path fill-rule="evenodd" d="M11.963 2.286a.75.75 0 01.072 1.497l-7.205.361.998 9.96 6.164-6.164a.75.75 0 011.06 0l5.61 5.61.518-5.18-5.2.26a.75.75 0 11-.072-1.497l7.205-.36a.75.75 0 01.79.74l-.001.497-1.03 10.305a.75.75 0 01-1.271.536l-6.39-6.39-6.39 6.39a.75.75 0 01-1.271-.536L4.82 6.704l-.002-.497a.75.75 0 01.79-.74l6.355.32z" clip-rule="evenodd" /></svg>', points: 0 }
-};
-
-function createObject(type) {
-    const object = document.createElement('div');
-    object.className = `falling-object w-8 h-8 ${type}`;
-    object.innerHTML = objectTypes[type].svg;
-    object.style.left = `${Math.random() * (gameArea.clientWidth - 32)}px`;
-    object.style.animationDuration = `${Math.random() * 2 + 2}s`;
-    gameArea.appendChild(object);
-
-    object.addEventListener('click', () => {
-        if (!isGameRunning) return;
-        handleObjectClick(object, type);
-    });
-
-    setTimeout(() => {
-        if (object.parentNode === gameArea) {
-            gameArea.removeChild(object);
-        }
-    }, parseFloat(object.style.animationDuration) * 1000);
-}
-
-function handleObjectClick(object, type) {
-    if (type === 'gem') {
-        score += objectTypes[type].points;
-    } else if (type === 'bomb') {
-        score = Math.max(0, score + objectTypes[type].points);
-    } else if (type === 'freeze') {
-        freezeTime = 5;
-        freezeTimerElement.classList.remove('hidden');
-        clearInterval(freezeInterval);
-        freezeInterval = setInterval(updateFreezeTimer, 1000);
-    }
-    updateScore();
-    gameArea.removeChild(object);
-}
-
-function updateScore() {
-    scoreElement.textContent = `Score: ${score}`;
-}
-
-function updateTimer() {
-    gameTime--;
-    timerElement.textContent = `Time: ${gameTime}s`;
-    if (gameTime <= 0) {
-        endGame();
-    }
-}
-
-function updateFreezeTimer() {
-    freezeTime--;
-    freezeTimerElement.querySelector('span').textContent = freezeTime;
-    if (freezeTime <= 0) {
-        clearInterval(freezeInterval);
-        freezeTimerElement.classList.add('hidden');
-    }
-}
-
-function startGame() {
-    isGameRunning = true;
-    score = 0;
-    gameTime = 60;
-    freezeTime = 0;
-    updateScore();
-    startButton.disabled = true;
-    startButton.classList.add('opacity-50', 'cursor-not-allowed');
-
-    gameInterval = setInterval(() => {
-        updateTimer();
-        if (freezeTime <= 0) {
-            if (Math.random() < 0.1) {
-                createObject('gem');
-            } else if (Math.random() < 0.05) {
-                createObject('bomb');
-            } else if (Math.random() < 0.02) {
-                createObject('freeze');
-            }
-        }
-    }, 1000);
-}
-
-function endGame() {
-    isGameRunning = false;
-    clearInterval(gameInterval);
-    clearInterval(freezeInterval);
-    freezeTimerElement.classList.add('hidden');
-    alert(`Game Over! Your score: ${score}`);
-    startButton.disabled = false;
-    startButton.classList.remove('opacity-50', 'cursor-not-allowed');
-    gameArea.innerHTML = '';
-}
-
-startButton.addEventListener('click', startGame);
+        
 
         function startHoldCosmic() {
             gameArea.innerHTML = `
