--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
             const prizes = [
                 
 
-{ type: 'gem', amount: 5, probability: 0.001 },
-{ type: 'coin', amount: 20, probability: 0.0005 },
-{ type: 'gem', amount: 10, probability: 0.0007 },
-{ type: 'coin', amount: 50, probability: 0.0001 },
-{ type: 'gem', amount: 20, probability: 0.0002 },
-{ type: 'coin', amount: 100, probability: 0.000005 },
+{ type: 'gem', amount: 5, probability: 0.00001 },
+{ type: 'coin', amount: 20, probability: 0.00003 },
+{ type: 'gem', amount: 10, probability: 0.000007 },
+{ type: 'coin', amount: 50, probability: 0.00001 },
+{ type: 'gem', amount: 20, probability: 0.00002 },
+{ type: 'coin', amount: 100, probability: 0.000003 },
 { type: 'gem', amount: 50, probability: 0.00002 },
-{ type: 'coin', amount: 200, probability: 0.000001 },
-{ type: 'gem', amount: 100, probability: 0.0000005 },
+{ type: 'coin', amount: 200, probability: 0.00000001 },
+{ type: 'gem', amount: 100, probability: 0.0000002 },
 
 
           
